2005-02-15  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/messagedialog.hg: Deprecate set_markup in favour of 
	set_message(string, false), which now uses the new 
	gtk_message_dialog_set_markup() function. We should not have added 
	this, but we are past API freeze now. Added documentation for 
	set_message() and set_secondary_text().
	* examples/book/dialogs/messagedialog/examplewindow.cc: Used 
	set_secondary_text().

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellview.hg, comboboxentry.hg, image.hg, main.hg,
	gkd/src/pixbuf.hg: Corrected some minor doxygen documenation errors.

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/atk_signals.defs, gdk/src/gdk_signals.defs, 
	gtk/gtk_signals.defs: Regenerate with latest extra_defs_gen, to get 
	the property documentation.
	* docs/reference: Added widget_hierarchy html image map and .dia 
	original from Marco Scholten in bug 88610.
	* docs/index.html: Added link to hierarchy.
	* docs/reference/Makefile.am: Add extra commands to install and 
	upload the widget_hierarchy files.

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/cellrenderertext.hg: Added documentation for the edited() 
	method. Bug found by Antonio Coralles.

2005-02-13  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/dragtarget.ccg: get_targets(): Fixed typo to fix the build.

2005-02-07  Ronald Lembcke <es186@fen-net.de>

	* gdk/src/dragcontext.ccg: get_targets(): Actually step through the 
	list, instead of looping infinitely. Bug #166412.

2005-02-03  Murray Cumming  <murrayc@murrayc.com>

	* gtk/src/targetlist.ccg: Add TargetList:: prefix to the create 
	method, so that it is actually defined. Bug found by Ronald Lembcke.

2005-02-02  Murray Cumming  <murrayc@murrayc.com>

	* examples/cellrenderercustom/cellrenderertoggle.cc: AppWindow:
	Move the inner ModelColumns class outside of the AppWindow class, 
	because the IRIX MipsPro compiler (wrongly) says that its 