@@ -87,7 +87,7 @@ public:
                   const Glib::ustring& path,
                   const Gdk::Rectangle& background_area,
                   const Gdk::Rectangle& cell_area,
-                  CellRendererState flags), gtk_cell_renderer_start_editing)
+                  CellRendererState flags = 0), gtk_cell_renderer_start_editing)
 
   _WRAP_METHOD(void set_fixed_size(int width, int height), gtk_cell_renderer_set_fixed_size)
   _WRAP_METHOD(void get_fixed_size(int& width, int& height) const, gtk_cell_renderer_get_fixed_size)
