@@ -1,3 +1,11 @@
+2005-02-18  Murray Cumming  <murrayc@murrayc.com>
+
+	* gtk/src/cellrenderer.hg: start_editing(): Add a default value of 0 
+	for the last flags parameter, because this is a valid value.
+	* examples/book/treeview/editable_cells: Added a number_validated 
+	column, which shows how to handle edited celss without the 
+	convenience functions, and how to validate date.
+
 2005-02-15  Murray Cumming  <murrayc@murrayc.com>
 
 	* gtk/src/messagedialog.hg: Deprecate set_markup in favour of 
